[package]
name = "ebeepyf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
clap = { version = "4.1", features = ["derive"] }
ebeepyf-common = { path = "../ebeepyf-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
bytes = { version = "1.5.0", default-features = false }

[[bin]]
name = "ebeepyf"
path = "src/main.rs"
