[package]
name = "ebeepyf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
buplib = { version = "3.3.0", features = ["future"] }
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
clap = { version = "4.1", features = ["derive"] }
ebeepyf-common = { path = "../ebeepyf-common", features = ["user"] }
anyhow = "1"
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
bytes = { version = "1.5.0", default-features = false }
rodio = { version = "0.17.3", default-features = false }
derive-new = "0.6.0"

[[bin]]
name = "ebeepyf"
path = "src/main.rs"
